# Hospital

./: .gitignore  AbilityMatrix.csv  AbilityMatrix_1.csv  AbsentSchedule_1.csv  CMakeLists.txt  Doctor.csv  Doctor.h  Doctor_1.csv  Instance.h  JobSchedule.csv  JobSchedule_1.csv  Library.h  OncallSchedule.csv  Room.csv  Room.h  Room_1.csv  Solution.h  Solver.h  error.csv  main.cpp  test.csv  test1.csv
